Fix styling and slideshow

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </p>
         <p>¿Qué estás esperando? ¡Invierte en tu Seguridad Personal y sé uno de los mejores!</p>
       </article>
-      <div>
+      <div class="slideshow">
         <img src="./assets/img/slide1_a.jpeg" alt="Hola">
-      </div class="slideshow">
+      </div>
     </section>
     <section>
       <article>
