--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>Filosofía</li>
         <li>Próximos Eventos</li>
         <li>Contacto</li>
+        <li>Prueba</li>
       </ul>
     </nav>
   </header>
