--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Próximos Eventos</li>
         <li>Contacto</li>
         <li>Prueba</li>
+        hola
       </ul>
     </nav>
   </header>
