--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <div class="titulo">
       <img src="/assets/img/logo_JKMM.jpg">
-      <h1>JIU JITSU KRAV MAGA MÉXICO</h1>
+      <h1>JIU JITSU<br>KRAV MAGA<br>MÉXICO</h1>
       <img src="/assets/img/logo_AMJ.jpg">
     </div>
     <section>
@@ -73,15 +73,10 @@
           </tr>
           <tr>
             <td>
-              <ul>
-                <li>Martes y Jueves: 18:00 - 19:00 hrs (NIÑOS)</li>
-                <li>Martes y Jueves: 19:00 - 21:00 hrs (JÓVENES Y ADULTOS)</li>
-                <li>Sábado: 8:00 - 10:00 hrs</li>
-              </ul>
+ <p>Martes y Jueves: 18:00 - 19:00 hrs (NIÑOS)<br>Martes y Jueves: 19:00 - 21:00 hrs (JÓVENES Y ADULTOS)<br>Sábado: 8:00 - 10:00 hrs</p>
             </td>
             <td>
-              Domingo: 9:00 - 11:00 hrs
-            </td>
+ <p>Domingo: 9:00 - 11:00 hrs</p>
           </tr>
         </table>
         <p>CUPO LIMITADO CLASES PARCIALMENTE PERSONALES</p>
